Fixed Firefox Icon problem + fixed toolbar position
I fixed the problem where the GlyphIcons were not showing on Firefox and
I fixed a problem i had with positioning the search bar for the search
page and the calendar page.

--- a/public_html/Teachers/CalendarPage/CalendarStyle.css
+++ b/public_html/Teachers/CalendarPage/CalendarStyle.css
@@ -90,7 +90,6 @@
 /*Search Bar*/
 
 #query-box {
-    display: inline;
     position: relative;
     width: 32vw;
     height: 3.7vw;
@@ -131,7 +130,6 @@
 
 #select-model {
     position: absolute;
-    display: inline;
     border: none;
     border-radius: .5vw;
     background-color: #7aaaca;
@@ -139,7 +137,6 @@
     font-family: "Calibri", sans-serif;
     width: 12vw;
     height: 3.7vw;
-    top: 8vw;
     left: 25vw;
     color: #ffffff;
     z-index: 0;
@@ -152,14 +149,12 @@
 
 #datepickerbutton {
     position: absolute;
-    display: inline;
     border: none;
     background-color: #7aaaca;
     font-size: 2.5vw;
     font-family: "Calibri", sans-serif;
     width: 12vw;
     height: 3.7vw;
-    top: 8vw;
     left: 63vw;
     color: #ffffff;
     border-radius: .5vw;
